--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "express": "^4.17.1",
     "mongoose": "^5.9.21",
     "nodemon": "^2.0.4",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0"
   }
 }
